--- a/project.json
+++ b/project.json
@@ -4,11 +4,11 @@
   "description": "Excel Automation",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.25.1-preview]",
-    "UiPath.Mail.Activities": "[2.0.11]",
-    "UiPath.System.Activities": "[25.2.1]",
-    "UiPath.Testing.Activities": "[24.10.4]",
-    "UiPath.UIAutomation.Activities": "[25.2.1-preview]"
+    "UiPath.Excel.Activities": "[3.2.1]",
+    "UiPath.Mail.Activities": "[2.3.10]",
+    "UiPath.System.Activities": "[25.8.0]",
+    "UiPath.Testing.Activities": "[25.4.1]",
+    "UiPath.UIAutomation.Activities": "[25.10.13]"
   },
   "webServices": [],
   "entitiesStores": [],
